--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/imick-io/node-js-authentication#readme",
   "dependencies": {
-    "express": "^4.19.2"
+    "connect-mongodb-session": "^5.0.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
