--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "mongoose": "^8.2.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
